@@ -1,3 +1,6 @@
+06/08/2010
+- bugfix when cascading some modifier like |strip|strip_tags modifier
+
 05/08/2010
 - added plugin type modifiercompiler to produce compiled modifier code
 - changed standard modifier plugins to the compiling versions whenever possible
